# booky

./: booky.cabal  docker-compose.yml  stack.yaml
app/: Main.hs
src/: Api.hs  Application.hs  Booking.hs  DAO.hs  DB.hs  Environment.hs  Main.hs
src/Booking/: Booking.hs  DB.hs
src/Environment/: DB.hs  Environment.hs
src/Parser/: Duration.hs
test/: ServerSpec.hs
test/Parser/: SimpleSpec.hs
