name:                booky
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcinnamond/booky#readme
license:             BSD3
license-file:        LICENSE
author:              John Cinnamond
maintainer:          john@cinnamond.me.uk
copyright:           John Cinnamond
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable booky
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , relude
                     , servant
                     , servant-server
                     , servant-client
                     , servant-docs
                     , aeson
                     , wai
                     , warp
